各种效率的优化，增加图像抗锯齿